# watchlist-agent

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
migrations/: 001_initial_schema.sql
src/watchlist/: schemas.py
src/watchlist/agents/: reddit.py
