[project]
name = "watchlist-agent"
version = "0.1.0"
description = "Public skeleton of the Reddit-touching subset of a personal pre-market trading research pipeline."
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [{ name = "Brian Gautreau" }]
dependencies = [
    "praw>=7.7",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/watchlist"]
